--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,5 +7,6 @@
     ],
     "runArgs": [
         "--gpus", "all"
-    ]
+    ],
+    "postCreateCommand": "apt-get update && apt-get install -y redis-server && redis-server --daemonize yes"
 }
