--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-streamlit==1.32.0
-pandas==2.2.1
-numpy==1.26.4
-opencv-python==4.9.0.80
-pillow==10.2.0 
+streamlit==1.23.1
+numpy==1.19.5
+opencv-python==4.11.0.86
+pillow==9.0.1
+redis==5.0.0
+stqdm==0.0.5
+ffmpeg-python==0.2.0
+protobuf==3.20.3
