preserving audio in output video

--- a/.gitignore
+++ b/.gitignore
@@ -41,5 +41,10 @@ Thumbs.db
 *.mov
 temp_*
 
+# Image files
+*.jpg
+*.jpeg
+*.png
+
 # New pattern to ignore all files starting with 'frame' 
 frame* 
