--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit==1.23.1
+streamlit==1.19.0
 numpy==1.19.5
-opencv-python==4.11.0.86
-pillow==9.0.1
-redis==5.0.0
-stqdm==0.0.5
-ffmpeg-python==0.2.0
-protobuf==3.20.3
+opencv-python>=4.11.0.86
+pillow>=9.0.1
+redis>=5.0.0
+stqdm>=0.0.5
+ffmpeg-python>=0.2.0
+protobuf==3.19.6
+typing-extensions==3.10.0.2
