--- a/.gitignore
+++ b/.gitignore
@@ -36,10 +36,8 @@ wheels/
 Thumbs.db
 
 # Project specific
-*.mp4
-*.avi
-*.mov
 /tfhub_cache/
+/frames/
 
 # Image files
 *.jpg
@@ -48,3 +46,9 @@ Thumbs.db
 *.mp4
 *.mov
 *.MOV
+*.avi
+*.mp4
+*.mov
+*.MOV
+*.avi
+*.mp4
