--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,15 @@ ffmpeg-python>=0.2.0
 # =============================================================================
 # These are for the Redis-based frame interpolation worker
 redis>=5.0.0
+# Celery + Flower - Python 3.7 compatible versions
+celery==4.4.2
+kombu==4.6.8
+billiard>=3.6.3.0,<4.0
+amqp>=2.5.2,<2.6
+vine==1.3.0
+flower==0.9.5
+prometheus-client==0.8.0
+importlib-metadata==1.7.0
 
 # =============================================================================
 # REACT UI (FASTAPI) DEPENDENCIES
